EFE-23 small fix to align text with checkboxes better

--- a/.modules/frontend/public/stylesheets/account_settings.less
+++ b/.modules/frontend/public/stylesheets/account_settings.less
@@ -34,6 +34,11 @@ section .settings-group {
     font-weight: bold;
     text-transform: uppercase;
   }
+
+  label {
+    line-height: 18px;
+  }
+
 }
 
 .save-button {
